# vgi-asn1

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
crates/asn1-core/: Cargo.toml
crates/asn1-core/src/: dump.rs  json.rs  lib.rs  oid.rs  pem.rs  reencode.rs  tlv.rs  tlvlist.rs  validate.rs  value.rs
crates/asn1-core/src/security/: cms.rs  kerberos.rs  ldap.rs  mod.rs  ocsp.rs  pkcs.rs  snmp.rs
crates/asn1-core/tests/: never_panic.rs  vectors.rs
crates/asn1-worker/: Cargo.toml
crates/asn1-worker/src/: arrow_io.rs  main.rs  meta.rs
crates/asn1-worker/src/scalar/: generic.rs  json_macro.rs  mod.rs  security.rs
crates/asn1-worker/src/table/: cms_signers.rs  ldap_messages.rs  mod.rs  oid_registry.rs  pem_decode.rs  pkcs12_bags.rs  snmp_varbinds.rs
test/sql/: generic.test  structural.test
