[package]
name = "asn1-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker decoding generic ASN.1 BER/CER/DER and the SNMP/Kerberos/LDAP/CMS/PKCS/OCSP modules to DuckDB over Apache Arrow"

[[bin]]
name = "asn1-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
asn1-core.workspace = true
serde_json.workspace = true
log = "0.4"
env_logger = "0.11"
